--- a/public/css/404.css
+++ b/public/css/404.css
@@ -1,4 +1,20 @@
-@import 'https://fonts.googleapis.com/css?family=VT323';
+/* @import 'https://fonts.googleapis.com/css?family=VT323'; */
+
+/* vt323-regular - latin */
+@font-face {
+	font-family: 'VT323';
+	font-style: normal;
+	font-weight: 400;
+	src: url('../fonts/vt323/vt323-v12-latin-regular.eot'); /* IE9 Compat Modes */
+	src: local('VT323 Regular'), local('VT323-Regular'),
+		 url('../fonts/vt323/vt323-v12-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+		 url('../fonts/vt323/vt323-v12-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
+		 url('../fonts/vt323/vt323-v12-latin-regular.woff') format('woff'), /* Modern Browsers */
+		 url('../fonts/vt323/vt323-v12-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
+		 url('../fonts/vt323/vt323-v12-latin-regular.svg#VT323') format('svg'); /* Legacy iOS */
+  }
+
+
  body, h1, h2, h3, h4, p, a {
 	 color: #e0e2f4;
 }
