--- a/resources/plugins/plugins.scss
+++ b/resources/plugins/plugins.scss
@@ -61,7 +61,7 @@
 // @import "~owl.carousel/dist/assets/owl.theme.default.css";
 
 // DropzoneJS -  is an open source library that provides drag'n'drop file uploads with image previews: https://www.dropzonejs.com/
-@import "~dropzone/dist/dropzone.css";
+// @import "~dropzone/dist/dropzone.css";
 
 // Quill - is a free, open source WYSIWYG editor built for the modern web. Completely customize it for any need with its modular architecture and expressive API: https://quilljs.com/
 // @import "~quill/dist/quill.snow.css";
