--- a/resources/plugins/plugins.scss
+++ b/resources/plugins/plugins.scss
@@ -21,7 +21,7 @@
 //////////////////////////////////////////////////////////////////////
 
 // Apexcharts - mBdern charting library that helps developers to create beautiful and interactive visualizations for web pages: https://apexcharts.com/
-@import "~apexcharts/dist/apexcharts.css";
+// @import "~apexcharts/dist/apexcharts.css";
 
 // FormValidation - Best premium validation library for JavaScript. Zero dependencies. Learn more: https://formvalidation.io/
 @import "../metronic/plugins/formvalidation/dist/css/formValidation.css";
@@ -30,13 +30,13 @@
 @import "~bootstrap-datepicker/dist/css/bootstrap-datepicker3.css";
 
 // Bootstrap Datetime Picker :https://eonasdan.github.io/bootstrap-datetimepicker/
-@import "~bootstrap-datetime-picker/css/bootstrap-datetimepicker.css";
+// @import "~bootstrap-datetime-picker/css/bootstrap-datetimepicker.css";
 
 // Bootstrap Timepicker - Easily select a time for a text input using your mouse or keyboards arrow keys: https://jdewit.github.io/bootstrap-timepicker/
-@import "~bootstrap-timepicker/css/bootstrap-timepicker.css";
+// @import "~bootstrap-timepicker/css/bootstrap-timepicker.css";
 
 // Bootstrap Daterangepicker
-@import "~bootstrap-daterangepicker/daterangepicker.css";
+// @import "~bootstrap-daterangepicker/daterangepicker.css";
 
 // Bootstrap Touchspin
 // @import "~bootstrap-touchspin/dist/jquery.bootstrap-touchspin.css";
@@ -45,7 +45,7 @@
 @import "~bootstrap-select/dist/css/bootstrap-select.css";
 
 // Bootstrap Switch - Bootstrap switch/toggle is a simple component used for activating one of two predefined options: https://mdbootstrap.com/docs/jquery/forms/switch/
-@import "~bootstrap-switch/dist/css/bootstrap3/bootstrap-switch.css";
+// @import "~bootstrap-switch/dist/css/bootstrap3/bootstrap-switch.css";
 
 // select2 - Select2 is a jQuery based replacement for select boxes: https://select2.org/
 @import "~select2/dist/css/select2.css";
@@ -67,7 +67,7 @@
 // @import "~quill/dist/quill.snow.css";
 
 // Tagify - Transforms an input field or a textarea into a Tags component, in an easy, customizable way, with great performance and small code footprint, exploded with features: https://github.com/yairEO/tagify
-@import "~@yaireo/tagify/src/tagify.scss";
+// @import "~@yaireo/tagify/src/tagify.scss";
 
 // Summernote - Super Simple WYSIWYG Editor on Bootstrap Summernote is a JavaScript library that helps you create WYSIWYG editors online: https://summernote.org/
 // @import "~summernote/dist/summernote.css";
